x/programs/rust/sdk_macros/tests/ui/user-defined-program-type.rs
use sdk_macros::public;

struct Program;

#[public]
pub fn test(_: Program) {}

fn main() {}
